propertie cuello de botella, evitar forks inecesarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ external.coin.pathToGetSymbols=/symbols
 external.coin.accessKey=89aae4bb97079f6e159730ad3f000538
 external.country.host=https://restcountries.com/v2/all
 external.country.accessKey=b51dfd70b0b2ccf136a0d7352876661c
+
+
+server.tomcat.threads.max=20
+server.tomcat.threads.max-queue-capacity=100000
